--- a/test/fixtures/scheduled_sprinkle_events.yml
+++ b/test/fixtures/scheduled_sprinkle_events.yml
@@ -4,8 +4,10 @@ one:
   sprinkle_id: 1
   valve_id: 1
   history_id: 1
+  valve_cmd: 1
 
 two:
   sprinkle_id: 1
   valve_id: 1
   history_id: 1
+  valve_cmd: 1
