--- a/test/fixtures/sprinkles.yml
+++ b/test/fixtures/sprinkles.yml
@@ -1,15 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  next_start_time: 2017-06-24 21:15:23
-  base_start_time: 2017-06-24 21:15:23
+  next_start_time: 2017-06-26 14:34:55
+  base_start_time: 2017-06-26 14:34:55
+  state: MyString
   time_input: MyString
   duration: 1
   valve_id: 1
 
 two:
-  next_start_time: 2017-06-24 21:15:23
-  base_start_time: 2017-06-24 21:15:23
+  next_start_time: 2017-06-26 14:34:55
+  base_start_time: 2017-06-26 14:34:55
+  state: MyString
   time_input: MyString
   duration: 1
   valve_id: 1
