--- a/test/fixtures/crontab_actuators.yml
+++ b/test/fixtures/crontab_actuators.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  host_name: MyString
-  port_number: MyString
+  state: MyString
 
 two:
-  host_name: MyString
-  port_number: MyString
+  state: MyString
