--- a/test/fixtures/valve_actuators.yml
+++ b/test/fixtures/valve_actuators.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  host_name: MyString
-  port_number: MyString
+  valve_id: 1
+  cmd: 1
 
 two:
-  host_name: MyString
-  port_number: MyString
+  valve_id: 1
+  cmd: 1
