--- a/test/fixtures/histories.yml
+++ b/test/fixtures/histories.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  start_time: 2017-06-26 14:34:55
-  stop_time: 2017-06-26 14:34:55
+  start_time: 2017-08-16 10:01:23
+  stop_time: 2017-08-16 10:01:23
   valve_id: 1
+  start_display: MyString
+  stop_display: MyString
 
 two:
-  start_time: 2017-06-26 14:34:55
-  stop_time: 2017-06-26 14:34:55
+  start_time: 2017-08-16 10:01:23
+  stop_time: 2017-08-16 10:01:23
   valve_id: 1
+  start_display: MyString
+  stop_display: MyString
