--- a/test/fixtures/valves.yml
+++ b/test/fixtures/valves.yml
@@ -3,6 +3,8 @@
 one:
   name: MyString
   gpio_pin: 1
+  active_sprinkle_id: 1
+  active_history_id: 1
   cpu2bb_color: MyString
   bb_pin: 1
   bb2relay_color: MyString
@@ -10,11 +12,13 @@ one:
   relay_index: 1
   relay2valve_color: MyString
   cmd: 1
-  base_time: 2017-06-26 14:34:56
+  base_time: 2017-08-18 09:00:22
 
 two:
   name: MyString
   gpio_pin: 1
+  active_sprinkle_id: 1
+  active_history_id: 1
   cpu2bb_color: MyString
   bb_pin: 1
   bb2relay_color: MyString
@@ -22,4 +26,4 @@ two:
   relay_index: 1
   relay2valve_color: MyString
   cmd: 1
-  base_time: 2017-06-26 14:34:56
+  base_time: 2017-08-18 09:00:22
