--- a/test/fixtures/histories.yml
+++ b/test/fixtures/histories.yml
@@ -1,15 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  start_time: 2017-08-16 10:01:23
-  stop_time: 2017-08-16 10:01:23
+  start_time: 2017-08-20 10:21:26
+  start_time_display: MyString
+  stop_time_display: MyString
   valve_id: 1
-  start_display: MyString
-  stop_display: MyString
 
 two:
-  start_time: 2017-08-16 10:01:23
-  stop_time: 2017-08-16 10:01:23
+  start_time: 2017-08-20 10:21:26
+  start_time_display: MyString
+  stop_time_display: MyString
   valve_id: 1
-  start_display: MyString
-  stop_display: MyString
